# BrainForecast

./: .gitignore  LICENSE  README.md  __init__.py  example.yaml  example_usage.ipynb  pyproject.toml
brain_forecast/: cli.py  cv.py  data.py  evaluation.py  features.py  reporting.py
brain_forecast/predictors/: __init__.py  ar.py  banded_ridge.py  channel_projection.py  moving_average.py  persistence.py  tft.py
notebooks/: brain_forecast_first_run.ipynb  standardizing_inputs.ipynb
runs/: sbatch_bench.sh  sbatch_tft.sh  sbatch_tft_all_features.sh  sbatch_tft_all_target.sh  sbatch_tft_bigger_layers.sh  sbatch_tft_bigger_layers_all_targets.sh  sbatch_tft_bigger_layers_all_targets_stride1.sh  sbatch_tft_complete.sh  sbatch_tft_complete_projections.sh
