[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_forecast"
version = "0.1.0"
description = "Forecasting future brain activity from movie stimuli and brain history"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tamires" }]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "pyarrow>=14",            # parquet I/O
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "statsmodels>=0.14",      # AR(p)
    "himalaya>=0.4",          # banded ridge
    "torch>=2.0",             # TFT backend
    "pytorch-lightning>=2.0",
    "pytorch-forecasting>=1.0",
]

[project.scripts]
brain-forecast = "brain_forecast.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brain_forecast*"]
